[package]
name = "lordly"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = { version = "0.2.95", features = ["serde"] }
web-sys = { version = "0.3", features = [
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "HtmlInputElement",
] }
thiserror = "1"
http = "1"
regex = "1"
log = "0.4"
console_log = "1.0"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
