[package]
name = "lordly"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
wasm-bindgen = { version = "0.2.106", features = ["serde"] }
web-sys = { version = "0.3.83", features = [
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "HtmlInputElement",
] }
thiserror = "2"
regex = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
